<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Blue screen simulator plus</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">Blue Screen Simulator Plus</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string-array name="Win12Splash">
        <item>Windows 1.01 startup screen</item>
        <item>Windows 2.03 startup screen</item>
        <item>No startup screen</item>
    </string-array>
    <string-array name="NineXErrors">
        <item>System error</item>
        <item>System error (Windows Me beta)</item>
        <item>Application error</item>
        <item>Application error (Windows 95 beta)</item>
        <item>Recoverable application error</item>
        <item>Driver error</item>
        <item>System is busy</item>
        <item>System is unresponsive</item>
        <item>Windows RG (parody)</item>
        <item>Unsafe eject</item>
    </string-array>
    <string-array name="types">
        <item>string</item>
        <item>boolean</item>
        <item>integer</item>
        <item>titles</item>
        <item>texts</item>
    </string-array>
    <string-array name="OperatingSystems">
        <item>Windows 11</item>
        <item>Windows 10</item>
        <item>Windows 8/8.1</item>
        <item>Windows 8 Beta</item>
        <item>Windows 7</item>
        <item>Windows Vista</item>
        <item>Windows XP</item>
        <item>Windows CE</item>
        <item>Windows 2000</item>
        <item>Windows NT 3.x/4.0</item>
        <item>Windows NT 3.1</item>
        <item>Windows 9x/Me</item>
        <item>Windows 3.1x</item>
        <item>Windows 1.x/2.x</item>
        <item>BOOTMGR</item>
    </string-array>
    <string name="os">Operating system</string>
    <string name="execute">Simulate</string>
    <string name="Win11_Emoticon" translatable="false">:(</string>
    <string name="Win11_Description" translatable="false">Your device ran into a problem and needs to restart. We\'re just collecting some error info, and then you can restart.</string>
    <string name="Win11_Progress" translatable="false">%s%% complete</string>
    <string name="Win11_Moreinfo" translatable="false">For more information about this issue and possible fixes, visit\nhttps://www.windows.com/stopcode</string>
    <string name="Win11_TechnicalInfo" translatable="false">If you call a support person, give them this info:\n\nStop code: %s</string>
    <string name="insiderPreviewCheck">Preview build</string>
    <string name="showDetails">Display error details</string>
    <string name="autoClose">Auto close</string>
    <string-array name="SettingsList">
        <item>Setting A</item>
        <item>Setting B</item>
        <item>Setting C</item>
    </string-array>
    <string name="errorCode">Error code</string>
    <string name="culprit">Culprit file</string>
    <string name="template">Template name</string>
    <string name="ostemplate">Operating system template</string>
    <string name="allowCustOS">Manually specify OS</string>
    <string name="filePreset">Choose file</string>
    <string name="fileCustom">Custom file</string>
    <string name="kfPlus">KF+</string>
    <string name="kfMinus">KF-</string>
    <string name="delKf">DKF</string>
    <string name="addKf">AKF</string>
    <string name="rndShort">Rand</string>
    <string name="save">Save</string>
    <string name="auto" translatable="false">Gen</string>
    <string name="clear">Clear</string>
    <string name="length">Length (ms)</string>
</resources>