<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_launcher_background"
    android:theme="@style/ThemeOverlay.BlueScreenSimulatorPlus.FullscreenContainer"
    tools:context=".Win11BSOD">

    <TextView
        android:id="@+id/waterMark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#6fffffff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="411dp"
        android:orientation="vertical"
        android:scaleX="0.75"
        android:scaleY="0.75">

        <TextView
            android:id="@+id/sadSmile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-20sp"
            android:fontFamily="@font/ubuntu"
            android:text="@string/Win11_Emoticon"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/white"
            android:textSize="100sp"
            tools:text="@string/Win11_Emoticon" />

        <TextView
            android:id="@+id/errorDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:layout_marginRight="70sp"
            android:fontFamily="@font/ubuntu_light"
            android:text="@string/Win11_Description"
            android:textColor="@color/white"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/errorProgress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:layout_marginRight="70sp"
            android:fontFamily="@font/ubuntu_light"
            android:text="@string/Win11_Progress"
            android:textColor="@color/white"
            android:textSize="23sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="132dp"
            android:layout_marginTop="30sp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/qrCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="15sp"
                android:layout_weight="1"
                android:minWidth="250sp"
                app:srcCompat="@mipmap/bsod_qr_foreground"
                tools:srcCompat="@mipmap/bsod_qr_foreground" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="126dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/moreInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ubuntu_light"
                    android:text="@string/Win11_Moreinfo"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/technicalDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15sp"
                    android:fontFamily="@font/ubuntu_light"
                    android:text="@string/Win11_TechnicalInfo"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</FrameLayout>