<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ErrorCodeEditor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.BlueScreenSimulatorPlus.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:titleTextColor="@color/white" />
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="777dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <SeekBar
                        android:id="@+id/progressSeekBar"
                        style="@android:style/Widget.DeviceDefault.SeekBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20sp"
                        android:foregroundTint="#000000"
                        android:indeterminate="false"
                        android:indeterminateTint="#000000"
                        android:max="100"
                        android:progress="50"
                        android:progressBackgroundTint="#000000"
                        android:progressTintMode="src_in"
                        android:scrollIndicators="top|left|bottom|start|end|right"
                        android:secondaryProgressTint="#FF0000"
                        android:soundEffectsEnabled="true"
                        android:splitTrack="false"
                        android:tickMarkTint="#FF0000"
                        android:tickMarkTintMode="add" />

                    <TextView
                        android:id="@+id/msTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/kfMinusButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10sp"
                            android:layout_weight="1"
                            android:text="@string/kfMinus" />

                        <Button
                            android:id="@+id/kfPlusButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10sp"
                            android:layout_weight="1"
                            android:text="@string/kfPlus" />

                        <EditText
                            android:id="@+id/editTextValue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:inputType="numberSigned"
                            android:text="0" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/delKfButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10sp"
                            android:layout_weight="1"
                            android:text="@string/delKf" />

                        <Button
                            android:id="@+id/addKfButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10sp"
                            android:layout_weight="1"
                            android:text="@string/addKf" />

                        <Button
                            android:id="@+id/randButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/rndShort" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/saveButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10sp"
                            android:layout_weight="1"
                            android:text="@string/save" />

                        <Button
                            android:id="@+id/autoButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10sp"
                            android:layout_weight="1"
                            android:text="@string/auto" />

                        <Button
                            android:id="@+id/clearButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/clear" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/rewButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@android:drawable/ic_media_rew"
                            android:minWidth="50dip" />

                        <Button
                            android:id="@+id/playButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@android:drawable/ic_media_play"
                            android:minWidth="50dip" />

                        <Button
                            android:id="@+id/endButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@android:drawable/ic_media_ff"
                            android:minWidth="50dip" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.1"
                            android:text="@string/length" />

                        <EditText
                            android:id="@+id/totalMillisEditText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:ems="10"
                            android:inputType="numberDecimal"
                            android:text="10000" />
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>

        </LinearLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>